--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@apollo/client": "3.4.0",
     "@apollo/link-error": "^2.0.0-beta.3",
     "@apollo/react-ssr": "^4.0.0",
+    "@keystone-6/document-renderer": "^1.1.2",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.11.0",
     "apollo-upload-client": "^14.1.3",
