--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "next -p 7777",
     "build": "next build",
-    "start": "next start -p 7777",
+    "start": "next -p 7777",
     "test": "NODE_ENV=test jest --watch",
     "heroku-postbuild": "next build",
     "preinstall": "npx npm-force-resolutions"
@@ -35,7 +35,7 @@
     "downshift": "^6.0.12",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
-    "graphql": "16.0.1",
+    "graphql": "15.0.0",
     "graphql-tag": "^2.11.0",
     "graphql-upload": "^11.0.0",
     "lodash.debounce": "^4.0.8",
@@ -43,8 +43,8 @@
     "next-with-apollo": "^5.1.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
     "waait": "^1.0.5"
