--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "@types/react": "18.0.1",
+    "@types/styled-components": "^5.1.34",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "casual": "^1.6.2",
